carga las imagenes

--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -38,6 +38,25 @@
 						<textarea name="description" id="description" class="form-input"></textarea>
 					</div>
 					<div class="col-12">
+						<form action="">
+						  <label for="image">Seleccione una imagen:</label>
+						  <input type="file" id="image" name="image" accept="image/*">
+						</form>
+					  </div>
+
+					  <div class="col-12 col-md-6">
+						  <label for="talle" class="form-label">Talle:</label>
+						  <select name="talle" id="talle" class="form-input">
+							  <option value="">Elegí</option>
+							  <option value="S">S</option>
+							  <option value="M">M</option>
+							  <option value="L">L</option>
+							  <option value="XL">XL</option>
+							  <option value="XXL">XXL</option>
+						  </select>
+					  </div>
+  
+					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
 					</div>
 				</div>
