se agregan link mapa y footrt hombre y mujer

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -22,16 +22,10 @@
                 </h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <a href="#!">Hombre</a>
+                    <a href="/cathombre">Hombre</a>
                 </p>
                 <p>
-                    <a href="#!">Mujer</a>
-                </p>
-                <p>
-                    <a href="#!">Niño</a>
-                </p>
-                <p>
-                    <a href="#!">Otros</a>
+                    <a href="/catmujer">Mujer</a>
                 </p>
             </div>
          
@@ -62,7 +56,7 @@
                 </h6>   
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <i class="fas fa-home  mr-3"></i> Los Lagos 1007, ar</p>
+                    <a href="https://goo.gl/maps/1xshKyrFvGz5Jqjp7">Los Lagos 1007, ar</a>
                 <p>
                     <i class="fas fa-envelope mr-3"></i> info@dh6.com</p>
                 <p>
