--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -79,7 +79,7 @@
 				<section class="product-box">
 					<a href="/products/detail/<%= product.id %>">
 						<figure class="product-box_image">
-							<img src="/images/products/<%= product.img %>" alt="imagen de producto">
+							<img src="/images/products/<%= product.image %>" alt="imagen de producto">
 						</figure>
 					<article class="product-box_data">
 						<h2>$<%= product.price  %></h2>
