se agrega register y se redireciona con link crearcuenta

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <header>
     <div class="containerlogin">
       <ul>
-      <li class="loginitem"><a href="">Cuenta</a></li>
-      <li class="loginitem"><a href="">Lista de deseos</a></li>
+      <li class="loginitem"><a href="/register">Crear Cuenta</a></li>
+      <!--   <li class="loginitem"><a href="">Lista de deseos</a></li> -->
       <li class="loginitem"><a href="products/login">Iniciar Sesion</a></li>
       </ul>
     </div>
