agregado checkbox talles

--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -44,17 +44,14 @@
 						</form>
 					  </div>
 
-					  <div class="col-12 col-md-6">
-						  <label for="talle" class="form-label">Talle:</label>
-						  <select name="talle" id="talle" class="form-input">
-							  <option value="">Elegí</option>
-							  <option value="S">S</option>
-							  <option value="M">M</option>
-							  <option value="L">L</option>
-							  <option value="XL">XL</option>
-							  <option value="XXL">XXL</option>
-						  </select>
-					  </div>
+					<div class="col-12 col-md-6">
+							<label for="talle">Seleccione talle</label>
+							<input type="checkbox" name="talle" value="S">S
+							<input type="checkbox" name="talle" value="M">M
+							<input type="checkbox" name="talle" value="L">L
+							<input type="checkbox" name="talle" value="XL">XL
+							<input type="checkbox" name="talle" value="XXL">XXL
+					</div>
   
 					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
